Sonar integration, tests of jpms via gradle, minimal readme, corrected minor code smells from sonar